Release 2025r2